# MagmaRenderer

./: Cargo.toml
src/: lib.rs  prelude.rs  window.rs
src/core/: buffer.rs  command_buffers.rs  core.rs  descriptor_set.rs  glfw_iwindow.rs  handles.rs  image.rs  image_load.rs  mod.rs  pipelines.rs  ref_or_arc.rs  renderpass.rs  winit_iwindow.rs
src/engine/: material.rs  mesh.rs  mesh_manager.rs  mod.rs  renderer.rs  sync_cache.rs
