[package]
name = "magma_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ash = "0.37.0+1.3.209"
# winit = "0.27.2"
ash-window = "0.11.0"
bytemuck = { version = "1.12.1", features = ["derive"] }
# vk-shader-macros = "0.2.8"
gpu-allocator = "0.18.0"
eyre = "0.6.8"
smallvec = "1.10.0"
raw-window-handle = "0.4.3"
glfw = { version = "0.47.0", default-features = false }
backtrace = "0.3.66"
png = "0.17.7"

[env]
RUSTFLAGS = "-A dead_code"
