[package]
name = "magma_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ash = "0.37.0+1.3.209"
ash-window = "0.11.0"
bytemuck = { version = "1.12.1", features = ["derive"] }
gpu-allocator = "0.18.0"
eyre = "0.6.8"
smallvec = "1.10.0"
raw-window-handle = "0.4.3"
glfw = { version = "0.47.0", default-features = false }
backtrace = "0.3.66"
png = "0.17.7"

# material system
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
shaderc = "^0.7.4"
spirv-reflect = "^0.2.3"

# mesh builder
glam = "0.22.0"


[env]
RUSTFLAGS = "-A dead_code"

[profile.dev]
build-override.debug = 2
